--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button"
-        android:text="Get Pollution Data"/>
+        android:text="Get Stations"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
