--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,21 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:text="Get Stations"/>
+        android:text="Get Stations" />
+
+    <Button
+        android:id="@+id/locationButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/button"
+        android:text="Get location" />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/button">
+        android:layout_below="@+id/button"
+        android:scrollbars = "vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="5dp"
             android:hint="Pollution Data"
-            android:id="@+id/fetcheddata"/>
+            android:id="@+id/fetcheddata"
+            android:gravity="bottom"
+            android:layout_weight="1.0"
+            android:scrollbars = "vertical"
+            android:maxLines = "26"/>
 
     </ScrollView>
 
