--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,8 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Get Stations" />
+        android:text="Get pollution reading" />
 
-    <Button
-        android:id="@+id/locationButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/button"
-        android:text="Get location" />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -32,7 +26,7 @@
             android:gravity="bottom"
             android:layout_weight="1.0"
             android:scrollbars = "vertical"
-            android:maxLines = "26"/>
+            />
 
     </ScrollView>
 
