--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -4,20 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
+    android:id="@+id/itemBackground"
     app:cardCornerRadius="4dp"
+
     >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp"
         >
         
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:padding="2dp"
-
             android:id="@+id/imageView"
             />
         <TextView
